--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <hr>
 <!-- Category section -->
         <section class="mt-6">
-            <ul id="menus" class="menu menu-horizontal flex justify-between bg-base-100 rounded-box  ">
-             
+            <ul id="menus" class="flex flex-col lg:flex-row  justify-between items-center  bg-base-100 rounded-box  ">
+             <li>Home</li>
               </ul>
         </section>
 
@@ -58,8 +58,15 @@
 
 
 
+
+
+
 <input type="checkbox" id="my-modal-4" class="modal-toggle" />
-<label id="modal_id" for="my-modal-4" class="modal cursor-pointer">
+<label for="my-modal-4" class="modal cursor-pointer">
+  <label id="modal-box" class="modal-box relative" for="">
+  
+  </label>
+</label>
   
 </label>
 </section>
