--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News Hub</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/9ecb5b0bf2.js" crossorigin="anonymous"></script>
     
 <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
@@ -46,7 +47,7 @@
         <!-- cards -->
         <section >
             <div id="details" class="image">
-                <div class="card lg:card-side bg-base-100 shadow-xl">
+                <div class="card lg:card-side bg-base-100 shadow-xl m-8">
                 </div>
               
                   </div>
