--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
               </ul>
         </section>
 
+        <section>
+          <div id="number">
+          
+          </div>
+        
+        </section>
+
         <!-- cards -->
         <section >
             <div id="details" class="image">
@@ -70,6 +77,12 @@
 </label>
   
 </label>
+</section>
+
+
+<!-- toggle -->
+<section>
+  <progress id="loader" class="progress w-56 hidden"></progress>
 </section>
 
 
