--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="flex-none">
                 <ul class="menu menu-horizontal p-0">
                   <li><a>News</a></li>
-                  <li><a>Blogs</a></li>
+                  <li><a href="blogs.html">Blogs</a></li>
                   </ul>
             </div>
                 <label tabindex="0" class="btn btn-ghost btn-circle avatar">
