again final commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="my-8 ">
         <div class="navbar bg-base-100">
             <div class="flex-1">
-              <a class="btn btn-ghost normal-case text-2xl">News Hub</a>
+              <a href="index.html" class="btn btn-ghost normal-case text-2xl">News Hub</a>
             </div>
             <div class="flex-none">
                 <ul class="menu menu-horizontal p-0">
@@ -40,7 +40,7 @@
 <!-- Category section start -->
         <section class="mt-6">
             <ul id="menus" class="flex flex-col lg:flex-row  justify-between items-center  bg-base-100 rounded-box  ">
-             <li>Home</li>
+             <a href="index.html">Home</a>
               </ul>
         </section>
         <section class="m-10">
@@ -76,7 +76,7 @@
 </section>
 <!-- toggle end -->
     </main>
-    
+
  <script src="app.js"></script>   
 </body>
 </html>
