--- a/blogs.html
+++ b/blogs.html
@@ -12,7 +12,7 @@
     <header class="my-8 ">
         <div class="navbar bg-base-100">
             <div class="flex-1">
-              <a class="btn btn-ghost normal-case text-2xl">News Hub</a>
+              <a href="index.html" class="btn btn-ghost normal-case text-2xl">News Hub</a>
             </div>
             <div class="flex-none">
                 <ul class="menu menu-horizontal p-0">
