--- a/blogs.html
+++ b/blogs.html
@@ -137,5 +137,13 @@
   </div>
 </div>
     </section>
+
+      <!-- footer section -->
+      <footer class="footer footer-center p-8 bg-base-300 text-base-content ">
+        <div>
+          <p>Copyright © 2022 - All right reserved by Md. Tarikul Islam</p>
+        </div>
+      </footer>
+   
 </body>
 </html>
