--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 <!-- toggle end -->
     </main>
 
+    <!-- footer section -->
+    <footer class="footer footer-center p-8 bg-base-300 text-base-content ">
+      <div>
+        <p>Copyright © 2022 - All right reserved by Md. Tarikul Islam</p>
+      </div>
+    </footer>
+
  <script src="app.js"></script>   
 </body>
 </html>
